c4prj2_input/grade.txt
Grading at Mon 11 Mar 2024 02:28:12 AM UTC
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:12:31: error: expected ‘]’ before ‘)’ token
   12 |  add_card_to(&(fc->decks[index)), *ptr);
      |                               ^
      |                               ]
future.c:12:2: error: too few arguments to function ‘add_card_to’
   12 |  add_card_to(&(fc->decks[index)), *ptr);
      |  ^~~~~~~~~~~
In file included from future.h:3,
                 from future.c:1:
deck.h:17:6: note: declared here
   17 | void add_card_to(deck_t * deck, card_t c);
      |      ^~~~~~~~~~~
future.c:12:33: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   12 |  add_card_to(&(fc->decks[index)), *ptr);
      |                                 ^
future.c:12:33: error: statement with no effect [-Werror=unused-value]
future.c:12:39: error: expected ‘;’ before ‘)’ token
   12 |  add_card_to(&(fc->decks[index)), *ptr);
      |                                       ^
      |                                       ;
future.c:12:39: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
